0.7.0 (2014-MM-DD)
==================

Backwards Incompatibilities
---------------------------

Bug Handling
------------

* Fixed lots of race conditions in the tests.

Features
--------

* Added the ability to test for field existence in message matcher (issue #958)

* Added support to ESJSonEncoder and ESLogstashV0Encoder to properly encode field arrays.

* Added a filter to monitor all process message failures (issue #948).

* Added UdpOutput.

0.6.1 (2014-MM-DD)
==================

Bug Handling
------------


0.6.0 (2014-07-09)
==================

Backwards Incompatibilities
---------------------------

* Go 1.3 now required for building.

* Changed handling of message stream framing. Before stream framing was
  presumed to always be required when encoding with protocol buffers, and not
  required when using other encodings. Now all outputs support an optional
  `use_framing` setting that will determine whether or not framing will be
  applied when using the OutputRunner's Encode method (issue #922).

* All files in a config directory that do not end in ".toml" will now be
  ignored and not loaded as a part of the Heka configuration (issue #750).

* Removed the PayloadJsonDecoder which is replaced by the Lua sandbox cjson
  module (issue 826).

* Removed LogfileInput and LogfileDirectoryManagerInput which were replaced
  by LogstreamerInput in 0.5.0 (issue 914).

* MultiDecoder no longer sets prepends name of the decoder instance to the
  message type value for every message. This was impacting performance, is
  almost never what is needed, and is almost always overwritten by the nested
  subdecoders anyway.

* MultiDecoder now has a `subs` option that refers to other top level decoder
  config definitions, instead of nested sub-configs and a separate `order`
  option specifying the order. This makes for less typing and the ability to
  reuse decoder definitions as both standalone decoders and across multiple
  MultiDecoders (issue #485).
